--- a/desafios/desafio10/estilo/style.css
+++ b/desafios/desafio10/estilo/style.css
@@ -58,7 +58,7 @@ header > p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 nav{
