--- a/ray/style.css
+++ b/ray/style.css
@@ -1,6 +1,7 @@
 body{
     text-align: center;
-    background-image: linear-gradient(to right, rgb(120, 138, 117), #217a21);
+    background-image: url(frog.jpg);
+    width: auto;
 }
 
 .fog{
@@ -11,4 +12,13 @@ body{
 
 img{
     max-width: 100vh;
+    max-height: 100vh;
+}
+
+main{
+    margin: auto;
+    background-color: white;
+    max-width: 350px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.589);
 }
